Add additional packages for running Ansible post-install playbook
Adding additional packages to the base image:
 - chronyd
 - autofs
 - rsyslog
 - openldap
 - tcpdump
 - tmux

[ICSHWI-7102]

--- a/sources/meta-ess/conf/machine/cct-64.conf
+++ b/sources/meta-ess/conf/machine/cct-64.conf
@@ -58,7 +58,6 @@ IMAGE_INSTALL_append = " sudo \
                          tscmon \
                          coreutils \
                          sysfsutils \
-                         sysklogd \
                          libhugetlbfs \
                          kmod \
                          kernel-modules \
@@ -79,7 +78,13 @@ IMAGE_INSTALL_append = " sudo \
                          python3-pkgutil \
                          sis8300 \
                          ethercat \
-                         sssd \                         
+                         sssd \
+                         openldap \
+                         autofs \
+                         chrony \
+                         tcpdump \
+                         tmux \
+                         rsyslog \
                          "
 
 LINUX_VERSION_EXTENSION = "-cct"
