--- a/sources/meta-ess/conf/machine/ifc14xx-64b.conf
+++ b/sources/meta-ess/conf/machine/ifc14xx-64b.conf
@@ -42,7 +42,6 @@ IMAGE_INSTALL_append = " i2c-tools \
                          tscmon \
                          coreutils \
                          sysfsutils \
-                         sysklogd \
                          libhugetlbfs \
                          kmod \
                          kernel-modules \
@@ -60,6 +59,12 @@ IMAGE_INSTALL_append = " i2c-tools \
                          python3-pkgutil \
                          python3-runpy \
                          python3-multiprocessing \
+                         chrony \
+                         autofs \
+                         rsyslog \
+                         openldap \
+                         tmux \
+                         tcpdump \
                          "
 IMAGE_INSTALL_remove = " udev-rules-qoriq"
 BBMASK = " lxc"
