--- a/sources/meta-ess/conf/distro/cct.conf
+++ b/sources/meta-ess/conf/distro/cct.conf
@@ -2,6 +2,7 @@ require conf/distro/poky.conf
 
 DISTRO = "cct"
 DISTRO_NAME = "Concurrent CPU SDK"
+DISTRO_FEATURES_append = " pam systemd virtulization"
 
 SDK_VERSION = "${@'${DISTRO_VERSION}'.replace('snapshot-${DATE}','snapshot')}-4.14"
 
