Add python3-pip to base images
[ICSHWI-7102]

--- a/sources/meta-ess/conf/machine/cct-64.conf
+++ b/sources/meta-ess/conf/machine/cct-64.conf
@@ -76,6 +76,7 @@ IMAGE_INSTALL_append = " sudo \
                          python3-runpy \
                          python3-multiprocessing \
                          python3-pkgutil \
+                         python3-pip \
                          sis8300 \
                          ethercat \
                          sssd \
