--- a/sources/meta-ess/conf/machine/ifc14xx-64b.conf
+++ b/sources/meta-ess/conf/machine/ifc14xx-64b.conf
@@ -59,6 +59,7 @@ IMAGE_INSTALL_append = " i2c-tools \
                          python3-pkgutil \
                          python3-runpy \
                          python3-multiprocessing \
+                         python3-pip \
                          chrony \
                          autofs \
                          rsyslog \
