Fix name of chrony recipe in .gitlab-ci.yml

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -44,7 +44,7 @@ build_image:
     - bitbake logrotate
     - bitbake iproute2
     - bitbake sssd
-    - bitbake chronyd
+    - bitbake chrony
     - bitbake rsyslog
     - bitbake tmux
     - bitbake tcpdump
@@ -143,7 +143,7 @@ build_image_cct:
     - bitbake logrotate
     - bitbake iproute2
     - bitbake sssd
-    - bitbake chronyd
+    - bitbake chrony
     - bitbake rsyslog
     - bitbake tmux
     - bitbake tcpdump
